# VLP

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  VLP-SPEC.md  dialogue.ndjson  vlp-1.1.json
docs/: context-enforcement.md  message-types.md  sessions.md  validation-rules.md
examples/: agent-audit.ndjson  dialogue.ndjson  session-workflow.ndjson
examples/python/: simple_agent.py
python/: README.md  pyproject.toml
python/src/vlp/: __init__.py  runtime.py  schema.py  sessions.py
python/tests/: test_runtime.py  test_sessions.py
schema/: vlp-1.1.json
typescript/: README.md  package.json  tsconfig.json
typescript/src/: index.ts  runtime.ts  schema.ts  sessions.ts  types.ts
