[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlp"
version = "1.1.0"
description = "Vigilith Language Protocol - Accountable AI agent messaging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vigilith", email = "dev@vigilith.ai" }
]
keywords = ["ai", "agents", "protocol", "messaging", "vlp", "vigilith"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Aidyssey/VLP"
Documentation = "https://github.com/Aidyssey/VLP#readme"
Repository = "https://github.com/Aidyssey/VLP"

[tool.hatch.build.targets.wheel]
packages = ["src/vlp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
